parser_grammar.output
Terminals unused in grammar

   DIVIDE


State 9 conflicts: 1 shift/reduce
State 12 conflicts: 7 reduce/reduce
State 19 conflicts: 2 shift/reduce


Grammar

    0 $accept: polynomial $end

    1 polynomial: polynomial poly
    2           | polynomial other
    3           | %empty

    4 poly: MINUS poly
    5     | poly MINUS poly
    6     | poly PLUS poly
    7     | poly MULTIPLY poly
    8     | L_BRACE poly R_BRACE
    9     | L_BRACE poly R_BRACE POWER exponent
   10     | term

   11 term: coef
   12     | powerVariable

   13 powerVariable: variable
   14              | variable POWER exponent

   15 variable: VAR

   16 exponent: NUM

   17 coef: NUM
   18     | RATNUM

   19 other: variable
   20      | LS_BRACE other
   21      | other RS_BRACE
   22      | other COMMA variable


Terminals, with rules where they appear

$end (0) 0
error (256)
RATNUM (258) 18
VAR (259) 15
NUM (260) 16 17
MULTIPLY (261) 7
PLUS (262) 6
MINUS (263) 4 5
L_BRACE (264) 8 9
R_BRACE (265) 8 9
LS_BRACE (266) 20
RS_BRACE (267) 21
DIVIDE (268)
POWER (269) 9 14
COMMA (270) 22
UMINUS (271)


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
polynomial (18)
    on left: 1 2 3, on right: 0 1 2
poly (19)
    on left: 4 5 6 7 8 9 10, on right: 1 4 5 6 7 8 9
term (20)
    on left: 11 12, on right: 10
powerVariable (21)
    on left: 13 14, on right: 12
variable (22)
    on left: 15, on right: 13 14 19 22
exponent (23)
    on left: 16, on right: 9 14
coef (24)
    on left: 17 18, on right: 11
other (25)
    on left: 19 20 21 22, on right: 2 20 21 22


State 0

    0 $accept: . polynomial $end

    $default  reduce using rule 3 (polynomial)

    polynomial  go to state 1


State 1

    0 $accept: polynomial . $end
    1 polynomial: polynomial . poly
    2           | polynomial . other

    $end      shift, and go to state 2
    RATNUM    shift, and go to state 3
    VAR       shift, and go to state 4
    NUM       shift, and go to state 5
    MINUS     shift, and go to state 6
    L_BRACE   shift, and go to state 7
    LS_BRACE  shift, and go to state 8

    poly           go to state 9
    term           go to state 10
    powerVariable  go to state 11
    variable       go to state 12
    coef           go to state 13
    other          go to state 14


State 2

    0 $accept: polynomial $end .

    $default  accept


State 3

   18 coef: RATNUM .

    $default  reduce using rule 18 (coef)


State 4

   15 variable: VAR .

    $default  reduce using rule 15 (variable)


State 5

   17 coef: NUM .

    $default  reduce using rule 17 (coef)


State 6

    4 poly: MINUS . poly

    RATNUM   shift, and go to state 3
    VAR      shift, and go to state 4
    NUM      shift, and go to state 5
    MINUS    shift, and go to state 6
    L_BRACE  shift, and go to state 7

    poly           go to state 15
    term           go to state 10
    powerVariable  go to state 11
    variable       go to state 16
    coef           go to state 13


State 7

    8 poly: L_BRACE . poly R_BRACE
    9     | L_BRACE . poly R_BRACE POWER exponent

    RATNUM   shift, and go to state 3
    VAR      shift, and go to state 4
    NUM      shift, and go to state 5
    MINUS    shift, and go to state 6
    L_BRACE  shift, and go to state 7

    poly           go to state 17
    term           go to state 10
    powerVariable  go to state 11
    variable       go to state 16
    coef           go to state 13


State 8

   20 other: LS_BRACE . other

    VAR       shift, and go to state 4
    LS_BRACE  shift, and go to state 8

    variable  go to state 18
    other     go to state 19


State 9

    1 polynomial: polynomial poly .
    5 poly: poly . MINUS poly
    6     | poly . PLUS poly
    7     | poly . MULTIPLY poly

    MULTIPLY  shift, and go to state 20
    PLUS      shift, and go to state 21
    MINUS     shift, and go to state 22

    MINUS     [reduce using rule 1 (polynomial)]
    $default  reduce using rule 1 (polynomial)


State 10

   10 poly: term .

    $default  reduce using rule 10 (poly)


State 11

   12 term: powerVariable .

    $default  reduce using rule 12 (term)


State 12

   13 powerVariable: variable .
   14              | variable . POWER exponent
   19 other: variable .

    POWER  shift, and go to state 23

    $end      reduce using rule 13 (powerVariable)
    $end      [reduce using rule 19 (other)]
    RATNUM    reduce using rule 13 (powerVariable)
    RATNUM    [reduce using rule 19 (other)]
    VAR       reduce using rule 13 (powerVariable)
    VAR       [reduce using rule 19 (other)]
    NUM       reduce using rule 13 (powerVariable)
    NUM       [reduce using rule 19 (other)]
    MINUS     reduce using rule 13 (powerVariable)
    MINUS     [reduce using rule 19 (other)]
    L_BRACE   reduce using rule 13 (powerVariable)
    L_BRACE   [reduce using rule 19 (other)]
    LS_BRACE  reduce using rule 13 (powerVariable)
    LS_BRACE  [reduce using rule 19 (other)]
    RS_BRACE  reduce using rule 19 (other)
    COMMA     reduce using rule 19 (other)
    $default  reduce using rule 13 (powerVariable)


State 13

   11 term: coef .

    $default  reduce using rule 11 (term)


State 14

    2 polynomial: polynomial other .
   21 other: other . RS_BRACE
   22      | other . COMMA variable

    RS_BRACE  shift, and go to state 24
    COMMA     shift, and go to state 25

    $default  reduce using rule 2 (polynomial)


State 15

    4 poly: MINUS poly .
    5     | poly . MINUS poly
    6     | poly . PLUS poly
    7     | poly . MULTIPLY poly

    $default  reduce using rule 4 (poly)


State 16

   13 powerVariable: variable .
   14              | variable . POWER exponent

    POWER  shift, and go to state 23

    $default  reduce using rule 13 (powerVariable)


State 17

    5 poly: poly . MINUS poly
    6     | poly . PLUS poly
    7     | poly . MULTIPLY poly
    8     | L_BRACE poly . R_BRACE
    9     | L_BRACE poly . R_BRACE POWER exponent

    MULTIPLY  shift, and go to state 20
    PLUS      shift, and go to state 21
    MINUS     shift, and go to state 22
    R_BRACE   shift, and go to state 26


State 18

   19 other: variable .

    $default  reduce using rule 19 (other)


State 19

   20 other: LS_BRACE other .
   21      | other . RS_BRACE
   22      | other . COMMA variable

    RS_BRACE  shift, and go to state 24
    COMMA     shift, and go to state 25

    RS_BRACE  [reduce using rule 20 (other)]
    COMMA     [reduce using rule 20 (other)]
    $default  reduce using rule 20 (other)


State 20

    7 poly: poly MULTIPLY . poly

    RATNUM   shift, and go to state 3
    VAR      shift, and go to state 4
    NUM      shift, and go to state 5
    MINUS    shift, and go to state 6
    L_BRACE  shift, and go to state 7

    poly           go to state 27
    term           go to state 10
    powerVariable  go to state 11
    variable       go to state 16
    coef           go to state 13


State 21

    6 poly: poly PLUS . poly

    RATNUM   shift, and go to state 3
    VAR      shift, and go to state 4
    NUM      shift, and go to state 5
    MINUS    shift, and go to state 6
    L_BRACE  shift, and go to state 7

    poly           go to state 28
    term           go to state 10
    powerVariable  go to state 11
    variable       go to state 16
    coef           go to state 13


State 22

    5 poly: poly MINUS . poly

    RATNUM   shift, and go to state 3
    VAR      shift, and go to state 4
    NUM      shift, and go to state 5
    MINUS    shift, and go to state 6
    L_BRACE  shift, and go to state 7

    poly           go to state 29
    term           go to state 10
    powerVariable  go to state 11
    variable       go to state 16
    coef           go to state 13


State 23

   14 powerVariable: variable POWER . exponent

    NUM  shift, and go to state 30

    exponent  go to state 31


State 24

   21 other: other RS_BRACE .

    $default  reduce using rule 21 (other)


State 25

   22 other: other COMMA . variable

    VAR  shift, and go to state 4

    variable  go to state 32


State 26

    8 poly: L_BRACE poly R_BRACE .
    9     | L_BRACE poly R_BRACE . POWER exponent

    POWER  shift, and go to state 33

    $default  reduce using rule 8 (poly)


State 27

    5 poly: poly . MINUS poly
    6     | poly . PLUS poly
    7     | poly . MULTIPLY poly
    7     | poly MULTIPLY poly .

    $default  reduce using rule 7 (poly)


State 28

    5 poly: poly . MINUS poly
    6     | poly . PLUS poly
    6     | poly PLUS poly .
    7     | poly . MULTIPLY poly

    MULTIPLY  shift, and go to state 20

    $default  reduce using rule 6 (poly)


State 29

    5 poly: poly . MINUS poly
    5     | poly MINUS poly .
    6     | poly . PLUS poly
    7     | poly . MULTIPLY poly

    MULTIPLY  shift, and go to state 20

    $default  reduce using rule 5 (poly)


State 30

   16 exponent: NUM .

    $default  reduce using rule 16 (exponent)


State 31

   14 powerVariable: variable POWER exponent .

    $default  reduce using rule 14 (powerVariable)


State 32

   22 other: other COMMA variable .

    $default  reduce using rule 22 (other)


State 33

    9 poly: L_BRACE poly R_BRACE POWER . exponent

    NUM  shift, and go to state 30

    exponent  go to state 34


State 34

    9 poly: L_BRACE poly R_BRACE POWER exponent .

    $default  reduce using rule 9 (poly)
